[package]
name = "ctermderella"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["crossterm"]
termion = [ "dep:termion", "tui/termion"]
crossterm = ["dep:crossterm", "tui/crossterm" ]

[dependencies]
crossterm = { version = "0.24.0", optional = true }
tui = { version = "0.18", default-features = false, optional = true }
termion = { version = "1.5.6", optional = true }
cfg-if = "1.0.0"
