[package]
name = "cinderella-terminal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
termion = [ "dep:termion", "tui/termion"]
crossterm = ["dep:crossterm", "tui/crossterm" ]

[dependencies]
crossterm = { version = "0.24.0", features = ["event-stream"], optional = true }
tui = { version = "0.18", default-features = false, optional = true }
termion = { version = "1.5.6", optional = true }
cfg-if = "1.0.0"
async-std = "1.12.0"
futures-lite = "1.12.0"
futures = "0.3.21"
futures-timer = "3.0.2"
